resources/kubernetes/landing-page-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-svc
  labels:
    app: landing-page
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: landing-page
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: landing-page
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          image: eu.gcr.io/public-data4life/covid-19-mapview-landing-page:master-20200403174545-925bc49
          ports:
            - containerPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-page-ing
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - host: swindy.se
      http:
        paths:
          - path: /
            backend:
              serviceName: landing-page-svc
              servicePort: 80
          - path: /*
            backend:
              serviceName: landing-page-svc
              servicePort: 80
